Add WHT Supplier delete permission and Update Profile database health metrics

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -238,9 +238,12 @@
                                                 class="checkbox-label" for="items">Items</label></li>
                                         <li><input type="checkbox" id="parties" class="form-check-input"><label
                                                 class="checkbox-label" for="parties">Parties</label></li>
-                                        <li><input type="checkbox" id="wht_supplier_link"
-                                                class="form-check-input"><label class="checkbox-label"
-                                                for="wht_supplier_link">WHT Supplier</label></li>
+                                        <li>
+                                            <input type="checkbox" id="wht_supplier_link" class="form-check-input"><label class="checkbox-label" for="wht_supplier_link">WHT Supplier</label>
+                                            <ul>
+                                                <li><input type="checkbox" id="delete_wht_supplier" class="form-check-input"><label class="checkbox-label" for="delete_wht_supplier">Can Delete</label></li>
+                                            </ul>
+                                        </li>
                                     </ul>
                                 </li>
                                 <li>
