Enhanced Sub-Department Report with parent grouping, totals, and breakdown support

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -267,6 +267,27 @@
                                             </ul>
                                         </li>
                                         <li>
+                                            <input type="checkbox" id="shop_reports" class="form-check-input"><label
+                                                class="checkbox-label" for="shop_reports">Shop Reports</label>
+                                            <ul class="list-unstyled">
+                                                <li><input type="checkbox" id="dept_wise_report_link"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="dept_wise_report_link">Department-Wise Report</label></li>
+                                                <li><input type="checkbox" id="sub_dept_wise_report_link"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="sub_dept_wise_report_link">Sub-Department-Wise
+                                                        Report</label></li>
+                                                <li><input type="checkbox" id="dept_wise_comparison_link"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="dept_wise_comparison_link">Dept-Wise Sale
+                                                        Comparision</label></li>
+                                                <li><input type="checkbox" id="branch_wise_comparison_link"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="branch_wise_comparison_link">Branch-Wise Sale
+                                                        Comparison</label></li>
+                                            </ul>
+                                        </li>
+                                        <li>
                                             <input type="checkbox" id="sales_reports" class="form-check-input"><label
                                                 class="checkbox-label" for="sales_reports">Sales Reports</label>
                                             <ul class="list-unstyled">
