Integrated Exemption Invoices module and refined search/UI consistency

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -239,9 +239,13 @@
                                         <li><input type="checkbox" id="parties" class="form-check-input"><label
                                                 class="checkbox-label" for="parties">Parties</label></li>
                                         <li>
-                                            <input type="checkbox" id="wht_supplier_link" class="form-check-input"><label class="checkbox-label" for="wht_supplier_link">WHT Supplier</label>
+                                            <input type="checkbox" id="wht_supplier_link"
+                                                class="form-check-input"><label class="checkbox-label"
+                                                for="wht_supplier_link">WHT Supplier</label>
                                             <ul>
-                                                <li><input type="checkbox" id="delete_wht_supplier" class="form-check-input"><label class="checkbox-label" for="delete_wht_supplier">Can Delete</label></li>
+                                                <li><input type="checkbox" id="delete_wht_supplier"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="delete_wht_supplier">Can Delete</label></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -325,6 +329,10 @@
                                                 <li><input type="checkbox" id="supplier_tax_report_link"
                                                         class="form-check-input"><label class="checkbox-label"
                                                         for="supplier_tax_report_link">Supplier Tax Report</label></li>
+                                                <li><input type="checkbox" id="exemption_invoices_report_link"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="exemption_invoices_report_link">Exemption Invoices
+                                                        Report</label></li>
                                             </ul>
                                         </li>
                                         <li>
@@ -482,6 +490,9 @@
                                         <li><input type="checkbox" id="supplier_wh_tax_link"
                                                 class="form-check-input"><label class="checkbox-label"
                                                 for="supplier_wh_tax_link">Supplier WH Tax</label></li>
+                                        <li><input type="checkbox" id="exemption_invoices_link"
+                                                class="form-check-input"><label class="checkbox-label"
+                                                for="exemption_invoices_link">Exemption Invoices</label></li>
 
 
                                     </ul>
